ajuste metodo post
se agregan los headers para recepción de datos

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,9 +20,9 @@
     </p>
     <ul>
         <li>GET api/item</li>
-        <li>POST api/item</li>
-        <li>
+        <li>POST api/item<br>
             <ul>
+                <li>Hay que agregar los headers: Accept y Content-Type con valor: application/json</li>
                 <li>int uid </li>
                 <li>String nombre</li>
                 <li>String descripcion</li>
